--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,33 @@
+// @see https://stackoverflow.com/questions/11002820/why-should-we-include-ttf-eot-woff-svg-in-a-font-face
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  font-style: normal;
+  font-weight: 700;
+  src: url('/style/fonts/Neue Haas Grotesk Display Pro 75 Bold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  font-style: normal;
+  font-weight: 600;
+  src: url('/style/fonts/NeueHaasDisplay-Medium.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  font-style: normal;
+  font-weight: 500;
+  src: url('/style/fonts/NeueHaasDisplay-Roman.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/style/fonts/NeueHaasDisplay-XThin.woff2') format('woff2');
+}
+
 @import './style/variables';
 @import "~bootstrap/scss/bootstrap";
 @import './style/bootswatch';
