--- a/src/components/form-card/index.scss
+++ b/src/components/form-card/index.scss
@@ -14,7 +14,7 @@
     margin-bottom: 75px;
   }
 
-  .ellipse89 {
+  .glowy1 {
     position: absolute;
     width: 257.55px;
     height: 252.83px;
@@ -27,7 +27,7 @@
     transform: rotate(45deg);
   }
 
-  .ellipse90 {
+  .glowy2 {
     position: absolute;
     width: 257.55px;
     height: 252.83px;
@@ -40,7 +40,7 @@
     transform: rotate(45deg);
   }
 
-  .ellipse91 {
+  .glowy3 {
     position: absolute;
     width: 257.55px;
     height: 252.83px;
