--- a/src/components/form-card/index.scss
+++ b/src/components/form-card/index.scss
@@ -11,7 +11,7 @@
   h4 {
     text-align: center;
     font-weight: 500;
-    margin-bottom: 75px;
+    margin-bottom: 35px;
   }
 
   .glowy1 {
@@ -53,4 +53,13 @@
     transform: rotate(45deg);
   }
 
+  input, input:focus {
+    background: #1C1C1E;
+    color: white;
+    font-size: 15px;
+    height: 54px;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.03);
+    border-radius: 10px;
+  }
 }
