--- a/src/components/form-card/index.scss
+++ b/src/components/form-card/index.scss
@@ -10,8 +10,9 @@
 
   h4 {
     text-align: center;
-    font-weight: 500;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
+    font-weight: 600;
+    font-size: 20px;
   }
 
   .glowy1 {
