--- a/src/pages/public/index.scss
+++ b/src/pages/public/index.scss
@@ -2,11 +2,14 @@
 }
 
 h1 {
- font-weight: 600;
+    font-weight: 600;
+    font-size: 72px;
+    line-height: 80px;
+    letter-spacing: -0.5px;
 }
 
 p {
-  font-weight: 400;
+    font-weight: 400;
 }
 
 .page-container {
@@ -23,10 +26,13 @@ p {
 
         p {
             max-width: 500px;
+            font-weight: 400;
+
+            font-size: 24px;
+            line-height: 30px;
         }
     }
 }
-
 
 .form-button {
     box-shadow: 0px 8px 40px 0px #0000001A;
@@ -37,7 +43,7 @@ p {
     align-items: center;
     //padding: 18px 28px;
     color: #4BC400;
-    font-weight: 500;
+    font-weight: 600;
 
     width: 185px;
     height: 56px;
