--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -56,7 +56,7 @@ $border-radius-sm:            0 !default;
 
 // stylelint-disable-next-line value-keyword-case
 //$font-family-sans-serif:      Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$font-family-sans-serif:      Neue Haas Grotesk Display Pro !default;
+$font-family-sans-serif:      'Neue Haas Grotesk Display Pro', Sans-serif !default;
 
 $text-muted:                  rgba(255, 255, 255, .4) !default;
 
