--- a/src/pages/public/index.scss
+++ b/src/pages/public/index.scss
@@ -57,6 +57,11 @@ p {
     border-style: none;
 }
 
+.button-container {
+    display: flex;
+    justify-content: center;
+}
+
 .glowy-main1 {
     position: absolute;
     width: 30%;
