Showing user's unconfirmed txs

--- a/src/pages/public/order/index.scss
+++ b/src/pages/public/order/index.scss
@@ -2,6 +2,11 @@
   justify-content: center;
 }
 
+.payment-link {
+  font-size: 13px;
+  text-align: center;
+}
+
 .link {
   font-size: 14.5px;
   color: #F75C1A;
