Current orders view

--- a/src/components/line-item/index.scss
+++ b/src/components/line-item/index.scss
@@ -6,6 +6,7 @@
   border-width: 0px 0px 1px 0px;
   padding-bottom: 12px;
   padding-top: 12px;
+  text-decoration: none!important;
 
   .label {
     color: #F75C1A;
