--- a/src/components/spinner/index.scss
+++ b/src/components/spinner/index.scss
@@ -1,3 +1,9 @@
+.spinner-container-centered {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
 .spinner-container {
   min-width: 45px;
 
