--- a/src/pages/public/buy/index.scss
+++ b/src/pages/public/buy/index.scss
@@ -5,3 +5,10 @@
   justify-content: space-between;
   align-content: space-between;
 }
+
+.form-group {}
+
+.input-addon {
+  //background-color: transparent;
+  height: 50px;
+}
