--- a/src/components/input-group/index.scss
+++ b/src/components/input-group/index.scss
@@ -1,18 +1,28 @@
 .custom-input-group-container {
-  margin-bottom: 20px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.03);
+  margin-bottom: 15px;
 
-  .custom-form-append {
-    border-radius: 10px;
-    background-color: #36363a;
-    font-size: 15px;
+  .custom-input-group {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.03);
+
+    .custom-form-append {
+      border-radius: 10px;
+      background-color: #36363a;
+      font-size: 15px;
+    }
+
+    .custom-form-control {
+      border-radius: 10px;
+      background-color: #1C1C1E;
+      color: white;
+      height: 54px;
+      font-size: 15px;
+    }
   }
 
-  .custom-form-control {
-    border-radius: 10px;
-    background-color: #1C1C1E;
-    color: white;
-    height: 54px;
-    font-size: 15px;
+  .bottom-label {
+    font-size: 13.5px;
+    text-align: right;
+    color: rgba(255, 255, 255, 0.65);
+    font-weight: 200;
   }
 }
