--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,14 @@
   font-family: 'Neue Haas Grotesk Display Pro';
   font-style: normal;
   font-display: swap;
+  font-weight: 200;
+  src: url('/style/fonts/NeueHaasDisplay-Thin.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  font-style: normal;
+  font-display: swap;
   font-weight: 400;
   src: url('/style/fonts/NeueHaasDisplay-Roman.woff2') format('woff2');
 }
