--- a/src/components/form-card/index.scss
+++ b/src/components/form-card/index.scss
@@ -5,7 +5,7 @@
   background-color: transparent;
   background-clip: content-box;
   overflow: hidden;
-  padding: 19px 36px;
+  padding: 40px 40px 0px 40px;
 
   h4 {
     text-align: center;
