--- a/src/index.scss
+++ b/src/index.scss
@@ -27,3 +27,20 @@
 @import './style/variables';
 @import "~bootstrap/scss/bootstrap";
 @import './style/bootswatch';
+
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+  outline: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
