--- a/src/components/input-group/index.scss
+++ b/src/components/input-group/index.scss
@@ -64,7 +64,9 @@
         white-space: nowrap;
       }
 
-      .custom-input-tooltip-icon {}
+      .custom-input-tooltip-icon {
+
+      }
     }
   }
 
@@ -75,29 +77,26 @@
     font-size: 15px;
     margin-top: 4px;
   }
+}
 
-  //.custom-input-group {
-  //  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.03);
-  //
-  //  .custom-form-append {
-  //    border-radius: 10px;
-  //    background-color: #36363a;
-  //    font-size: 15px;
-  //  }
-  //
-  //  .custom-form-control {
-  //    border-radius: 10px;
-  //    background-color: #1C1C1E;
-  //    color: white;
-  //    height: 54px;
-  //    font-size: 15px;
-  //  }
-  //}
-  //
-  //.bottom-label {
-  //  font-size: 13.5px;
-  //  text-align: right;
-  //  color: rgba(255, 255, 255, 0.65);
-  //  font-weight: 200;
-  //}
+.custom-input-tooltip-container {
+  font-family: Neue Haas Grotesk Display Pro;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px;
+  color: white;
+
+  h4 {
+    font-size: 15px;
+  }
+
+  p {
+    font-size: 15px;
+    font-weight: 200;
+  }
+
+  padding: 20px;
+  max-width: 260px;
+  display: flex;
+  flex-direction: column;
 }
