--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -1,14 +1,8 @@
 .footer-container {
-  //background-color: red;
-  height: 116px;
-  margin-top: 26px;
-  border-top-style: solid;
-  border-color: #1C1C1D;
-  border-width: 1px;
-
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   align-items: center;
+  padding-bottom: 40px;
 }
-
-
