--- a/src/components/form-card/index.scss
+++ b/src/components/form-card/index.scss
@@ -7,11 +7,17 @@
   overflow: hidden;
   padding: 40px 40px 0px 40px;
 
-  h4 {
-    text-align: center;
-    margin-bottom: 30px;
-    font-weight: 600;
-    font-size: 20px;
+  .form-card-container {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content: space-between;
+
+    .form-card-content {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   .glowy1 {
