--- a/src/pages/public/configure/index.scss
+++ b/src/pages/public/configure/index.scss
@@ -4,6 +4,17 @@
   flex-direction: column;
   justify-content: space-between;
   align-content: space-between;
+
+  .form-fields {
+    flex: 1
+  }
+
+  .button-container {
+    //flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .form-group {}
