--- a/src/pages/public/payment/index.scss
+++ b/src/pages/public/payment/index.scss
@@ -1,14 +1,6 @@
-.payment-tabs {
-  justify-content: center;
-}
-
-.payment-link {
-  font-size: 13px;
-  text-align: center;
-}
-
-.link {
-  font-size: 14.5px;
+.payment-page-subheading {
+  font-weight: 600;
+  font-size: 15px;
   color: #F75C1A;
-  cursor: pointer;
+  margin-top: 20px;
 }
