--- a/src/components/form-card/index.scss
+++ b/src/components/form-card/index.scss
@@ -1,5 +1,5 @@
 .form-card {
-  //min-height: 812px;
+  max-width: 480px;
   min-height: 788px;
   border-radius: 15px;
   background-color: transparent;
