--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -1,4 +1,7 @@
 .backlink-container {
+  display: flex;
+  justify-content: space-between;
+
   h4 {
     text-align: center;
     margin-bottom: 30px;
@@ -6,8 +9,7 @@
     font-size: 20px;
   }
 
-  .header-backlink {
-    position: absolute;
+  .header-button {
     cursor: pointer;
   }
 }
