--- a/src/components/form-card/index.scss
+++ b/src/components/form-card/index.scss
@@ -1,6 +1,6 @@
 .form-card {
   max-width: 480px;
-  min-height: 788px;
+  height: 830px;
   border-radius: 15px;
   background-color: transparent;
   background-clip: content-box;
