Payment request mobile layout fix

--- a/src/components/payment-request/index.scss
+++ b/src/components/payment-request/index.scss
@@ -12,7 +12,12 @@
   .payment-request-top {
     display: flex;
 
+    @media (max-width:480px)  {
+      flex-direction: column;
+    }
+
     .payment-request-qr {
+      margin-bottom: 20px;
     }
 
     .payment-request-details {
