--- a/src/components/full-webpage-container/index.scss
+++ b/src/components/full-webpage-container/index.scss
@@ -31,6 +31,7 @@
     align-content: center;
 
     .info-col {
+      margin-top: 20px;
       display: flex;
       justify-content: center;
       align-items: center;
