Claim view mobile layout fixes

--- a/src/components/heading/index.scss
+++ b/src/components/heading/index.scss
@@ -1,5 +1,7 @@
 .page-heading {
-  h1 {
+  margin-bottom: 20px;
+
+  span {
     font-family: Neue Haas Grotesk Display Pro;
     font-style: normal;
     font-weight: 600;
