--- a/src/components/form-card/index.scss
+++ b/src/components/form-card/index.scss
@@ -1,7 +1,7 @@
 .form-card {
   width: 100%;
   max-width: 480px;
-  height: 830px;
+  min-height: 800px;
   border-radius: 15px;
   background: rgba(16, 16, 16, 0.92);
   background-clip: content-box;
