--- a/src/components/full-webpage-container/index.scss
+++ b/src/components/full-webpage-container/index.scss
@@ -22,8 +22,6 @@
 }
 
 .webpage-container {
-  padding-bottom: 100px;
-
   .full-webpage-row1 {
     position: relative;
     min-height: 100vh;
@@ -94,9 +92,8 @@
       box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.25);
       border-radius: 26px;
       max-width: 480px;
-      padding: 40px
+      padding: 40px;
+      margin-bottom: 40px;
     }
   }
-
-
 }
