--- a/src/components/form-card/index.scss
+++ b/src/components/form-card/index.scss
@@ -6,6 +6,7 @@
   background: rgba(16, 16, 16, 0.92);
   background-clip: content-box;
   overflow: hidden;
+  box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.25);
 
   .form-card-container {
     padding: 40px 40px 0px 40px;
