--- a/src/components/full-webpage-container/index.scss
+++ b/src/components/full-webpage-container/index.scss
@@ -54,7 +54,7 @@
     }
   }
 
-  h1 {
+  .webpage-heading {
     font-family: Neue Haas Grotesk Display Pro;
     font-style: normal;
     font-weight: 600;
@@ -67,12 +67,13 @@
     margin-bottom: 44px;
   }
 
-  h4 {
+  .webpage-subheading {
     font-weight: 600;
     font-size: 24px;
     line-height: 30px;
     letter-spacing: -0.5px;
     color: rgba(255, 255, 255, 0.98);
+    margin-bottom: 22px;
   }
 
   p {
@@ -94,6 +95,13 @@
       max-width: 480px;
       padding: 40px;
       margin-bottom: 40px;
+
+      .info-card-heading {
+        font-weight: 600;
+        font-size: 24px;
+        letter-spacing: -0.5px;
+        color: rgba(255, 255, 255, 0.98);
+      }
     }
   }
 }
