--- a/src/components/payment-request/index.scss
+++ b/src/components/payment-request/index.scss
@@ -17,7 +17,9 @@
     }
 
     .payment-request-qr {
-      margin-bottom: 20px;
+      @media (max-width:480px)  {
+        margin-bottom: 10px;
+      }
     }
 
     .payment-request-details {
