--- a/src/pages/public/claim/index.scss
+++ b/src/pages/public/claim/index.scss
@@ -1,3 +1,7 @@
+.claim-channel-top-divider {
+  margin-top: 0px;
+}
+
 .claim-channel-container {
   .claim-channel-button-spacer {
     margin-top: 21px;
