Payment success frame sticks for 3 seconds

--- a/src/pages/public/payment/index.scss
+++ b/src/pages/public/payment/index.scss
@@ -1,3 +1,10 @@
+.payment-page-success-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+
 .payment-page-subheading {
   font-weight: 600;
   font-size: 15px;
