--- a/src/pages/public/confirm/index.scss
+++ b/src/pages/public/confirm/index.scss
@@ -12,6 +12,11 @@
     color: #8E8E93;
     font-size: 15px;
     line-height: 22px;
+
+    .confirmation-message-highlight {
+      color: white;
+      font-weight: 600;
+    }
   }
 }
 
