Updated footer logo

--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -5,4 +5,19 @@
   justify-content: center;
   align-items: center;
   padding-bottom: 40px;
+
+  .footer-logo {
+    width: 127.72px;
+  }
+
+  .footer-text {
+    margin-top: 10px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    text-align: center;
+    color: #8E8E93;
+    opacity: 0.6;
+  }
 }
