--- a/src/components/channel-balance-bar/index.scss
+++ b/src/components/channel-balance-bar/index.scss
@@ -11,7 +11,7 @@
   }
 
   .channel-balance-remote {
-    background: #F7931A;
+    background: #FFAE00;
     border-radius: 20px 0px 0px 20px;
     height: 100%;
     margin-right: 0.5px;
