--- a/src/components/input-group/index.scss
+++ b/src/components/input-group/index.scss
@@ -58,7 +58,7 @@
       align-items: center;
 
       .custom-input-append {
-        color: #F7931A;
+        color: #FFAE00;
         font-family: Neue Haas Grotesk Display Pro;
         font-style: normal;
         font-weight: normal;
