--- a/src/components/tabs/index.scss
+++ b/src/components/tabs/index.scss
@@ -24,7 +24,7 @@
     &.active {
       border-bottom-style: solid;
       border-width: 1px;
-      color: #F7931A;
+      color: #FFAE00;
     }
   }
 
