--- a/src/pages/public/menu/index.scss
+++ b/src/pages/public/menu/index.scss
@@ -37,7 +37,7 @@
       display: flex;
       align-items: center;
       text-align: center;
-      color: #F7931A;
+      color: #FFAE00;
     }
   }
 }
