--- a/src/components/action-button/index.scss
+++ b/src/components/action-button/index.scss
@@ -21,6 +21,15 @@ a:link, a:visited, a:hover, a:active {
   .action-button-text {
     color: white;
   }
+
+  .action-button-text-sm {
+    color: white;
+    font-size: 15px;
+  }
 }
 
+
+.action-button-container-sm {
+  padding: 10px 20px
+}
 
