--- a/src/components/icon-ring/index.scss
+++ b/src/components/icon-ring/index.scss
@@ -25,7 +25,7 @@
 .icon-ring-pending {
   @extend .icon-ring;
   background: rgba(255, 210, 0, 0.16);
-  border: 2px solid #FFD200;
+  border: 2px solid #FFAE00;
   box-shadow: 0px 1px 10px rgba(255, 210, 0, 0.3), 0px 4px 116px rgba(255, 210, 0, 0.4);
 }
 
