--- a/src/pages/public/orders/index.scss
+++ b/src/pages/public/orders/index.scss
@@ -68,3 +68,13 @@
 		padding-right: 20px;
 	}
 }
+
+.order-delete-icon {
+	display: 'flex';
+	flex-direction: 'row';
+	align-items: 'center';
+	padding: '0px';
+	gap: '8px';
+	width: '188px';
+	height: '43px';
+}
