feat: new themes

--- a/src/pages/public/index.scss
+++ b/src/pages/public/index.scss
@@ -1,27 +1,32 @@
+@import './custom-themes.scss';
+
 h1 {
-    font-weight: 600;
-    line-height: 80px;
-    letter-spacing: -0.5px;
-    font-size: 60px;
+	font-weight: 600;
+	line-height: 80px;
+	letter-spacing: -0.5px;
+	font-size: 60px;
 }
 
 p {
-    font-weight: 400;
+	font-weight: 400;
 }
 
-
-
 .form-button {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: #ffffff;
-    font-weight: 600;
-    height: 56px;
-    border-style: none;
-    background: linear-gradient(90deg, rgba(228, 103, 53, 0.98) 0%, rgba(201, 50, 80, 0.98) 70.83%, rgba(202, 72, 140, 0.98) 100%);
-    border-radius: 58px;
-    font-size: 17px;
-    padding: 15px 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	color: #ffffff;
+	font-weight: 600;
+	height: 56px;
+	border-style: none;
+	background: linear-gradient(
+		90deg,
+		rgba(228, 103, 53, 0.98) 0%,
+		rgba(201, 50, 80, 0.98) 70.83%,
+		rgba(202, 72, 140, 0.98) 100%
+	);
+	border-radius: 58px;
+	font-size: 17px;
+	padding: 15px 30px;
 }
