--- a/src/pages/public/orders/index.scss
+++ b/src/pages/public/orders/index.scss
@@ -41,6 +41,7 @@
 			.order-list-details {
 				flex: 1;
 				display: flex;
+				margin-right: 15px;
 				flex-direction: column;
 
 				.order-status-heading {
